--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "``` shell mkdir -p deps wget -O deps/xlsx.js 'https://cdn.sheetjs.com/xlsx-0.18.10/package/dist/xlsx.mini.min.js' wget -O deps/mithril.js 'https://esm.sh/v91/mithril@2.2.2/es2022/mithril.js' ```",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "esbuild src/index.tsx --outdir=dist --bundle --watch & python -m http.server"
   },
   "repository": {
     "type": "git",
