trim some of the toplevel files :)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "``` shell mkdir -p deps wget -O deps/xlsx.js 'https://cdn.sheetjs.com/xlsx-0.18.10/package/dist/xlsx.mini.min.js' wget -O deps/mithril.js 'https://esm.sh/v91/mithril@2.2.2/es2022/mithril.js' ```",
   "main": "index.js",
   "scripts": {
-    "watch": "python -m http.server & esbuild --bundle src/index.tsx --outdir=dist --sourcemap --minify --watch "
+    "watch": "pkill -f http.server; cd static && python -m http.server & esbuild --bundle src/index.tsx --outdir=static/js --sourcemap --minify --watch "
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,10 @@
   "devDependencies": {
     "esbuild": "^0.15.18",
     "typescript": "^4.9.3"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "sourceType": "module"
+    }
   }
 }
